5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1592_1803.log
== TEST (2019-03-29 21:15:52) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=(var1//10)//10%10
d=(var1//1000)
var2=(a*1)+(b*2)+(c*3)+(d*4)
print(var2)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:16:36) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=(var1//10)//10%10
d=(var1//1000)
var2=(a*1)+(b*2)+(c*3)+(d*4)
var3=var2//11
print(var3)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:17:09) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=(var1//10)//10%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:19:54) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=(var1//10)//10%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- EXECUTION TIME:
0.142206
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
4
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:20:32) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:31:05) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:33:09) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:33:16) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:33:24) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3)
-- EXECUTION TIME:
0.207655
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:33:27) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3)
-- EXECUTION TIME:
0.206568
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:34:25) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:34:31) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d=var1%10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=var1%10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:34:49) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d=var1%10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=var1%10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:35:08) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d= var1 % 10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d= var1 % 10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:36:06) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d=var1%10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=var1%10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:36:27) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)//10%10
c=((var1//10)%10
d=var1//10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=var1//10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:36:36) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)//10%10
c=((var1//10)%10
d=var1//10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- EXECUTION TIME:
0.147538
-- ERROR:
  File "/home/codebench/codes/1592/1803/main.py", line 5
    d=var1//10
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:36:38) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)//10%10
c=((var1//10)%10
d=var1//10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=var1//10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:41:28) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d=var1%10
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=var1%10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:42:17) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:42:28) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:42:39) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:42:51) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:43:06) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)//10%10
c=((var1//10)%10
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:43:21) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1%10
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:43:41) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:44:14) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:44:22) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:44:31) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- EXECUTION TIME:
0.201303
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:44:33) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:44:41) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- EXECUTION TIME:
0.129959
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:45:46) 
-- CODE:
var1=int(input("numero de 4 digitos: "))
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:45:58) 
-- CODE:
var1=int(input())
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:46:06) 
-- CODE:
var1=int(input())
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3)
-- EXECUTION TIME:
0.255847
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:51:03) 
-- CODE:
var1=int(input())
a=var1//1000
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3)
-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:56:12) 
-- CODE:
var1=int(input())
a=(var1%1000)*5
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2%11
print(var3)

-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:56:31) 
-- CODE:
var1=int(input())
a=(var1%1000)
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2%11
print(var3)

-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:57:08) 
-- CODE:
var1=int(input())
a=(var1%1000)
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3%11)

-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:57:15) 
-- CODE:
var1=int(input())
a=(var1%1000)
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3%11)

-- EXECUTION TIME:
0.218577
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:57:17) 
-- CODE:
var1=int(input())
a=(var1%1000)
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3%11)

-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:57:53) 
-- CODE:
var1=int(input())
a=(var1//1000)
b=((var1//10)//10)%10
c=((var1//10)%10)
d=(var1%10)
var2=(a*5)+(b*4)+(c*3)+(d*2)
var3=var2//11
print(var3%11)

-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:59:48) 
-- CODE:
var1=int(input())
a=(var1%10)
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2//11
print(var3%11)

-- ERROR:
File "XXXX", line 5
    d=(var1%10)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:00:35) 
-- CODE:
var1=int(input())
a=(var1%10)
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2%11
print(var3)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:00:43) 
-- CODE:
var1=int(input())
a=(var1%10)
b=(var1//10)%10
c=((var1//10)//10)%10
d=(var1//1000)
var2=(a*2)+(b*3)+(c*4)+(d*5)
var3=var2%11
print(var3)

-- EXECUTION TIME:
0.216714
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
